feat-video: Vulkan library/extension loader

--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -70,7 +70,11 @@ macro(pandora_video_autodetect_files category_id)
     endif()
     unset(CWORK_AUTODETECTED_FILES)
     
-    autodetect_source_files("${_SOURCE_DIR}/${category_id}" "*.[hc]*")
+    if(IOS OR APPLE)
+        autodetect_source_files("${_SOURCE_DIR}/${category_id}" "*.[hcm]*")
+    else()
+        autodetect_source_files("${_SOURCE_DIR}/${category_id}" "*.[hc]*")
+    endif()
     if(CWORK_AUTODETECTED_FILES)
         if(_SOURCE_FILES)
             set(_SOURCE_FILES ${_SOURCE_FILES} ${CWORK_AUTODETECTED_FILES})
