infra-ci: appveyor continuous integration: add vulkan

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ environment:
     GENERATOR: Ninja
     VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
     VCVARSARG: amd64
-    VULKAN: true
+    VULKAN_SDK_VERSION: 1.2.189.0
     PATH: C:\Program Files\LLVM\bin;C:\msys64\mingw64\bin;%PATH%;C:\Windows\System32
     LIB_SUFFIX: C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
     PACMAN_PACKAGES: "mingw-w64-x86_64-ninja"
@@ -57,7 +57,7 @@ environment:
     GENERATOR: Visual Studio 16 2019
     VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
     VCVARSARG: amd64
-    VULKAN: true
+    VULKAN_SDK_VERSION: 1.2.189.0
     
   # MSVC-VS2019 x86 (x32) / C++17
   - TOOLCHAIN: "Visual Studio 2019"
@@ -82,7 +82,8 @@ environment:
     VCVARSARG: amd64
 
 cache:
-  - VulkanSDK-1.2-Installer.exe
+  # Cache Vulkan SDK to avoid re-downloading it (invalidate cache if .appveyor.yml is changed)
+  - C:\VulkanSDK -> .appveyor.yml
 
 install:
   # ---- set environment ----
@@ -90,7 +91,21 @@ install:
   - set PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%APPVEYOR_BUILD_FOLDER%\deps\bin;%PATH%
  
   # ---- Vulkan install ----
-  - if defined VULKAN call _scripts/ci/install_vulkan.bat
+  - ps: >-
+      if (Test-Path 'env:ImportStatus ') { 
+        if (-not (Test-Path -Path "C:\VulkanSDK\$ENV:VULKAN_SDK_VERSION" -PathType Container)) {
+          cinst vulkan-sdk --version "$ENV:VULKAN_SDK_VERSION"
+        }
+      }
+  - ps: >-
+      if (Test-Path 'env:ImportStatus ') { 
+        [Environment]::SetEnvironmentVariable(
+          "VULKAN_SDK",
+          "C:\VulkanSDK\$ENV:VULKAN_SDK_VERSION",
+          "User"
+        )
+      }
+  - if defined VULKAN_SDK_VERSION echo %VULKAN_SDK%
   # ---- Pacman packages install ----
   - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc ""
   - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman -Rd --noconfirm mingw-w64-i686-gcc-ada mingw-w64-x86_64-gcc-ada mingw-w64-i686-gcc-objc mingw-w64-x86_64-gcc-objc"
