infra-ci: appveyor continuous integration: add vulkan

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -129,7 +129,8 @@ install:
   - if defined LIB_SUFFIX set PATH=%PATH%;%LIB_SUFFIX%
 
 build_script:
-  - refreshenv
+  - if defined VULKAN_SDK_VERSION setx VULKAN_SDK C:\VulkanSDK\%VULKAN_SDK_VERSION%
+  - if defined VULKAN_SDK_VERSION set VULKAN_SDK=C:\VulkanSDK\%VULKAN_SDK_VERSION%
   # ---- project version + build directory ----
   - cd C:\projects\pandora_toolbox
   - call _scripts/update_version.bat
