--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,8 +15,8 @@ environment:
     GENERATOR: Visual Studio 16 2019
     VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
     VCVARSARG: amd64
-    VULKAN_SDK_VERSION: 1.2.182.0
-    VULKAN_LIB_ARCH: x64
+    #VULKAN_SDK_VERSION: 1.2.182.0
+    #VULKAN_LIB_ARCH: x64
     
   # MSVC-VS2019 x86 (x32) / C++17
   - TOOLCHAIN: "Visual Studio 2019"
