--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -96,16 +96,13 @@ install:
         }
       }
   # ---- Pacman packages install ----
-  - cmd: >-
-      if defined PACMAN_PACKAGES (
-        C:\msys64\usr\bin\bash.exe -lc ""
-        C:\msys64\usr\bin\bash.exe -lc "yes | pacman -Rd --noconfirm mingw-w64-i686-gcc-ada mingw-w64-x86_64-gcc-ada mingw-w64-i686-gcc-objc mingw-w64-x86_64-gcc-objc"
-        C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
-        C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
-        C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
-        C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy"
-        C:\msys64\usr\bin\bash.exe -lc "for i in {1..3}; do pacman --noconfirm -S %PACMAN_PACKAGES% && break || sleep 15 ; done"
-      )
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc ""
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "yes | pacman -Rd --noconfirm mingw-w64-i686-gcc-ada mingw-w64-x86_64-gcc-ada mingw-w64-i686-gcc-objc mingw-w64-x86_64-gcc-objc"
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy" & exit 0
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suy"
+  - if defined PACMAN_PACKAGES C:\msys64\usr\bin\bash.exe -lc "for i in {1..3}; do pacman --noconfirm -S %PACMAN_PACKAGES% && break || sleep 15 ; done"
   # ---- MinGW install ----
   - if defined MINGW_URL choco upgrade chocolatey
   - if defined MINGW_URL if not exist C:\mingw.7z appveyor-retry appveyor DownloadFile %MINGW_URL% -FileName C:\mingw.7z
@@ -131,14 +128,11 @@ build_script:
   - mkdir %PACKAGE_ID%
   - cd ..
   # ---- cmake generation + build ----
-  - cmd: >-
-      if defined VULKAN_SDK_VERSION (
-        setx VULKAN_SDK C:\VulkanSDK\%VULKAN_SDK_VERSION%
-        set VULKAN_SDK=C:\VulkanSDK\%VULKAN_SDK_VERSION%
-        echo F|xcopy /s C:\VulkanSDK\%VULKAN_LIB_ARCH%\vulkan-1.dll C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\vulkan-1.dll
-        echo F|xcopy /s C:\VulkanSDK\%VULKAN_LIB_ARCH%\vulkan-1.dll C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\video\%BUILD_TYPE%\vulkan-1.dll
-        REGSVR32 "C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\vulkan-1.dll"
-      )
+  - if defined VULKAN_SDK_VERSION setx VULKAN_SDK C:\VulkanSDK\%VULKAN_SDK_VERSION%
+  - if defined VULKAN_SDK_VERSION set VULKAN_SDK=C:\VulkanSDK\%VULKAN_SDK_VERSION%
+  - if defined VULKAN_SDK_VERSION echo F|xcopy /s C:\VulkanSDK\%VULKAN_LIB_ARCH%\vulkan-1.dll C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\vulkan-1.dll
+  - if defined VULKAN_SDK_VERSION echo F|xcopy /s C:\VulkanSDK\%VULKAN_LIB_ARCH%\vulkan-1.dll C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\video\%BUILD_TYPE%\vulkan-1.dll
+  - if defined VULKAN_SDK_VERSION REGSVR32 "C:\projects\pandora_toolbox\_build\%PACKAGE_ID%\vulkan-1.dll"
   - cmake -S . -B ./_build/%PACKAGE_ID% -G"%GENERATOR%" %CMAKE_ARGS% || (echo CMAKEERROR && echo CMAKEOUTPUT && exit 1)
   - cmake --build ./_build/%PACKAGE_ID% --config %BUILD_TYPE% --target install
 
