infra-project: examples: simple renderer example: update with graphics pipeline + add MSAA

--- a/_examples/02_simple_renderer/CMakeLists.txt
+++ b/_examples/02_simple_renderer/CMakeLists.txt
@@ -18,7 +18,9 @@ cmake_minimum_required(VERSION 3.14)
 #           they can be referenced from Cmake files that do not use CWork.
 set(PANDORA_TOOLBOX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 
-set(CWORK_SHADER_COMPILERS ON CACHE INTERNAL "" FORCE)
+set(CWORK_SHADER_COMPILERS ON CACHE INTERNAL "" FORCE) # shaders are compiled at runtime (for big projects, precompile them and disable this)
+set(CWORK_GEOM_STAGE_OFF ON CACHE INTERNAL "" FORCE)   # no geometry shader used by project -> disable unused features
+set(CWORK_TESS_STAGE_OFF ON CACHE INTERNAL "" FORCE)   # no tessellation shader used by project -> disable unused features
 include("${PANDORA_TOOLBOX_DIR}/_cmake/cwork.cmake")
 cwork_read_version_from_file("${PANDORA_TOOLBOX_DIR}/build_version.txt" ON)
 
